edit baseURL & 2 posts

--- a/content/post/20191013给孩子请个ai职业围棋老师吧.md
+++ b/content/post/20191013给孩子请个ai职业围棋老师吧.md
@@ -9,6 +9,8 @@ codes = ["bash"]
 douban = false
 mathjax = false
 slug = "installation of sabaki and lizzie with leela zero "
+comments = true
+keywords = ["围棋","leela-zero","Lizzie"]
 +++
 
 常忧虑如今的孩子沉疴在肩，校门口，一眼掠去，个个体不过半百斤，却负笈十余，步履蹒跚，且这还只是体格上的磨砺，精神上尚有数座“大山”压肘着孩童的天性，犹如芒刺在背。
