--- a/content/post/20191013给孩子请个ai职业围棋老师吧.md
+++ b/content/post/20191013给孩子请个ai职业围棋老师吧.md
@@ -4,6 +4,7 @@ date= 2019-10-13T09:47:20+08:00
 type = "post"
 categories = ["琐记"]
 draft = false
+toc = true
 reward = true
 codes = ["bash"]
 douban = false
@@ -19,7 +20,10 @@ keywords = ["围棋","leela-zero","Lizzie"]
 
 好在小夏争强好胜，也就是所谓的上进。学棋伊始，天天拉我对弈，起初我也乐于奉陪，但渐渐棋力不支，疲于应战。小夏心生骄意，我意识到是时候请个AI名师出马了。
 
+{{< img src="https://ian2.oss-cn-hangzhou.aliyuncs.com/clt6/20200228160210.png" >}}
+
 <!--more-->
+
 alphaGO完胜李世乭、柯洁，令围棋风头一时无两，人工智能、大数据受到空前瞩目，但事实上，对于初学者而言，打谱用弈典，AI用zen7、leela，人肉对弈用弈城、野狐足矣。
 
 唯一不足之处，不像 window 平台有弈典、天顶、银星、弈城、野狐等对战软件，macOS 围棋打谱、对弈软件非常少，口碑、用户双赢的大概仅有沈易川开发的[Sabaki][l1]。
