--- a/content/post/青年宋美龄的爱情观与择偶观.md
+++ b/content/post/青年宋美龄的爱情观与择偶观.md
@@ -18,7 +18,7 @@ keywords = ["宋美龄","蒋介石"]
 
 至于“蒋介石搞婚外情”，按蒋氏夫妇当日判断，背后实有政治阴谋。考虑到该种阴谋之危险，蒋氏夫妇曾于1944年7月5日举行茶会，约集包括政府各院院长在内的高级干部及欧美人士60人，“坦白说明外间之流言蜚语与敌党阴谋之所在” [^3]。以一国元首之身份，为个人之“绯闻”，召集如此高规格“辟谣”会，可谓史上罕见。堪与其比者，或许唯有林彪在政治局会议上证明“叶群在我结婚时，是纯洁的处女”。[^4]
 
-{{<img src="http://ian2.oss-cn-hangzhou.aliyuncs.com/2019-02-17-073654.jpg" alt="图：蒋介石与宋美龄结婚留影">}}
+{{<img src="https://ian2.oss-cn-hangzhou.aliyuncs.com/2019-02-17-073654.jpg" alt="图：蒋介石与宋美龄结婚留影">}}
 
 随着蒋介石日记的公开，今人已可以非常清晰地看到，蒋对宋确实存在真爱[^5]。不过，宋对蒋的感情如何，则因宋生前宣称“把一切交给上帝”，不接受口述访问，也未曾留下日记类资料，难免仍予人扑朔迷离之感。
 
@@ -32,7 +32,7 @@ keywords = ["宋美龄","蒋介石"]
 
 > “昨天，我午饭后与林方慧一起回她住的宾馆，HK正好在等她，我先看到他，立即放下东西逃走了。方慧追上我，我只好回去。我不知为什么，但我确实不想见到他。我心里因尴尬而痛苦的滋味只有天知道。我没有理由这个样子。我们两个都冷漠地客套着。起初，他试图提起以前，但我想我当时太生硬和冷漠了，结果也让他冷了场。今天再见到他我决定采取一种快乐而又漠不关心的态度。”[^8]
 
-{{<img src="http://ian2.oss-cn-hangzhou.aliyuncs.com/2019-02-17-073715.jpg" alt="图：1938年(左)、1943年(右)，宋美龄两次登上《时代》封面。">}}
+{{<img src="https://ian2.oss-cn-hangzhou.aliyuncs.com/2019-02-17-073715.jpg" alt="图：1938年(左)、1943年(右)，宋美龄两次登上《时代》封面。">}}
 
 1918年4、5月间，宋还曾喜欢上一位已婚男士。在给Mills的信中，宋写道：
 
