add bilibili shortcode

--- a/content/post/青年宋美龄的爱情观与择偶观.md
+++ b/content/post/青年宋美龄的爱情观与择偶观.md
@@ -14,6 +14,8 @@ keywords = ["宋美龄","蒋介石"]
 
 上述流言，如今已证实全系伪造。
 
+<!--more-->
+
 如刘纪文之子曾公开辟谣：“坊间传闻我父亲在美国留学期间与宋美龄订婚，但其实我父亲从未去过美国留学，他是在英国剑桥留学。与我父亲订婚的是古应芬长女古婉仪。”[^1]杨天石也考据认定所谓“宋美龄与威尔基偷情”毫无可信度，“编造得极为拙劣、低下”。[^2]
 
 至于“蒋介石搞婚外情”，按蒋氏夫妇当日判断，背后实有政治阴谋。考虑到该种阴谋之危险，蒋氏夫妇曾于1944年7月5日举行茶会，约集包括政府各院院长在内的高级干部及欧美人士60人，“坦白说明外间之流言蜚语与敌党阴谋之所在” [^3]。以一国元首之身份，为个人之“绯闻”，召集如此高规格“辟谣”会，可谓史上罕见。堪与其比者，或许唯有林彪在政治局会议上证明“叶群在我结婚时，是纯洁的处女”。[^4]
