--- a/content/post/20200301将闲置ECS改造成anki服务器.md
+++ b/content/post/20200301将闲置ECS改造成anki服务器.md
@@ -112,7 +112,7 @@ ankiserverctl.py start
 [在线工具端口扫描](https://developer.aliyun.com/article/tool.cc/port/)
 
 
-## 客户端配置：
+## 客户端配置
 
 ### PC端
 打开 Anki \-> 菜单栏 \->工具 \-> 插件 \-> 打开插件文件夹
@@ -133,7 +133,7 @@ anki.sync.SYNC_MEDIA_BASE = 'http://192.168.0.100:27701/msync/'
 
 然后，保存，重启 Anki。照常登录，此处登录名和密码是刚刚 ankiserverctl.py adduser username 中的用户名和密码。然后同步就可以了
 
-### Android端：
+### Android端
 
 左滑菜单\-> 设置\->高级设置 \->自定义同步服务器
 
