--- a/content/post/20200302猎户星座.md
+++ b/content/post/20200302猎户星座.md
@@ -10,11 +10,9 @@ mathjax = false
 slug = "Orion"
 keywords = ["朴树","松任谷由実","Carl Sagan"]
 +++
-两年前，朴树跟网易云音乐合作了一个音乐项目叫「stage舞台」，寓意生活即舞台。本质是livehouse运动的简化版，朴师傅带着乐队在北京什刹海公园唱了一首《猎户星座》
+两年前的一个周末，北京什刹海公园依然像百年前林语堂笔下所描述的「景色淳雅，悠然从容」，像张暖忻的三十年前拍的《北京，你早》一样富有烟火气，溜冰的孩童，卖花的老人，吁气的人群……
 
-周末的什刹海公园，像林语堂笔下所描述的「景色淳雅，悠然从容，有大老人的节奏感」，依旧像张暖忻的三十年前拍的《北京，你早》一样富有烟火气，溜冰的孩童，卖花的老人，吁气的人群……
-
-在这个普通的冬日，朴树穿着Daddy Oh Daddy日系风撞色毛裤，呼啦啦吹响了铃木Hammond PRO-44，有人说那段口风琴似爱液般又暖又刺激，有个日文词异常传神：一发入魂(にゅうこん)。
+在这个普通的冬日，朴树穿着Daddy Oh Daddy日系撞色毛裤，呼啦啦吹响了铃木Hammond PRO-44，有人说那段口风琴似爱液般又暖又刺激，有个日文词异常传神：一发入魂(にゅうこん)。
 
 <!--more-->
 
@@ -43,11 +41,11 @@ data-loop="none">
 
 {{< /quote >}}
 
-朴师傅片头说这首歌成形于一九九七年， 九七年的我在干嘛呢，遏抑着偷窥楼下初蕾少女晾在竹杆上的文胸的悸动，在夏末潮湿的夜风里听《Lady In Red》。近两天在ins上看到日本一个老婶又拿着铃木pro44吹Yuming(松任谷由実)怀旧名曲《晩夏(ひとりの季节)》中那句
+这是朴树跟网易云音乐合作的一个音乐项目叫"stage舞台"，寓意生活即舞台，音乐即人生。朴师傅片头说这首《猎户星座》成形于一九九七年。九七年的我在干嘛呢，遏抑着偷窥楼下初蕾少女晾在窗外文胸的悸动，在夏末潮湿的晚风里听着《Lady In Red》。近两天在ins上看到日本老阿姨又操起铃木pro44吹Yuming(松任谷由実)那首秀逸的《晩夏(ひとりの季节)》，其中有词云：
 
 > 夏日将逝/而残存的酷热不肯离去/吞噬晚霞的鸡冠花/如同熊熊燃烧
 
-倏然又来了感觉。就像友川カズキ自慰时老是放Lee Morgan的号子一样，我有段不顺心的时候一起沉湎在2000年前的歌里，听郁东、筠子，感觉那里的生活特别纯粹，特别安心。
+倏然来了感觉。就像友川カズキ自慰时老是放Lee Morgan的号子一样，我有段不顺心的时候一起沉湎在2000年前的歌里，听郁东、筠子，感觉那时的生活特别纯粹，特别安心。
 
 台湾漫画家高妍在诚光社出过一本64页的小册子叫《间隙》，致敬細野晴臣的《風街ろまん》，大意是人生好似音乐，都有间隙，但短暂的灿若鲸落般的音乐耦合，让她产生了偌大的人生满足感，忘却了生活的平庸与琐碎，这便是音乐的力量。
 
