--- a/content/post/20200302猎户星座.md
+++ b/content/post/20200302猎户星座.md
@@ -10,9 +10,9 @@ mathjax = false
 slug = "Orion"
 keywords = ["朴树","松任谷由実","Carl Sagan"]
 +++
-两年前的一个周末，北京什刹海公园依然像百年前林语堂笔下所描述的「景色淳雅，悠然从容」，像张暖忻的三十年前拍的《北京，你早》一样富有烟火气，溜冰的孩童，卖花的老人，吁气的人群……
+两年前的一个周末，北京什刹海公园依然像百年前林语堂笔下所描述的「景色淳雅，悠然从容」，像张暖忻的三十年前拍的《北京，你早》一样富有烟火气，溜冰打趣的孩童，笑意的卖花老人，吁气的人群……
 
-在这个普通的冬日，朴树穿着Daddy Oh Daddy日系撞色毛裤，呼啦啦吹响了铃木Hammond PRO-44，有人说那段口风琴似爱液般又暖又刺激，有个日文词异常传神：一发入魂(にゅうこん)。
+在这个普通的冬日，朴树穿着Daddy Oh Daddy日系撞色毛裤，呼啦啦吹响了铃木Hammond PRO-44，中间的口风琴似爱液般又暖又刺激，灵魂很舒服地蠕动着，想起有个日文词异常传神：一发入魂(にゅうこん)。
 
 <!--more-->
 
@@ -41,13 +41,15 @@ data-loop="none">
 
 {{< /quote >}}
 
+
+
 这是朴树跟网易云音乐合作的一个音乐项目叫"stage舞台"，寓意生活即舞台，音乐即人生。朴师傅片头说这首《猎户星座》成形于一九九七年。九七年的我在干嘛呢，遏抑着偷窥楼下初蕾少女晾在窗外文胸的悸动，在夏末潮湿的晚风里听着《Lady In Red》。近两天在ins上看到日本老阿姨又操起铃木pro44吹Yuming(松任谷由実)那首秀逸的《晩夏(ひとりの季节)》，其中有词云：
 
 > 夏日将逝/而残存的酷热不肯离去/吞噬晚霞的鸡冠花/如同熊熊燃烧
 
 倏然来了感觉。就像友川カズキ自慰时老是放Lee Morgan的号子一样，我有段不顺心的时候一起沉湎在2000年前的歌里，听郁东、筠子，感觉那时的生活特别纯粹，特别安心。
 
-台湾漫画家高妍在诚光社出过一本64页的小册子叫《间隙》，致敬細野晴臣的《風街ろまん》，大意是人生好似音乐，都有间隙，但短暂的灿若鲸落般的音乐耦合，让她产生了偌大的人生满足感，忘却了生活的平庸与琐碎，这便是音乐的力量。
+台湾女漫画家高妍在诚光社出了一本致敬細野晴臣的《風街ろまん》的作品叫《间隙》，大意是人生好似音乐，都有间隙，但短暂的灿若鲸落般的音乐耦合，让她产生了偌大的人生满足感，忘却了生活的平庸与琐碎，这便是音乐的力量。
 
 {{< img src="https://ian2.oss-cn-hangzhou.aliyuncs.com/clt6/36d2acb23e4c867b0454v3.png" >}}
 {{< img src="https://ian2.oss-cn-hangzhou.aliyuncs.com/clt6/ac4e65447d662f0a05e6v2.png" >}}
@@ -62,10 +64,7 @@ data-loop="none">
 
 {{< img src="https://ian2.oss-cn-hangzhou.aliyuncs.com/clt6/20200302191432.png" alt="图中亮点处为地球，那个黯淡蓝点就是我们的星球">}}
 
-
-有时我想，在宇宙中，在时空里，我们算什么呢？也许连一粒微尘都算不上。但在浩瀚之中，存在即是存在，每一分钟亦不容抹煞。
-
-科普作家Carl Sagan在1994年出版的《黯淡的蓝点》写了一番荡气回肠的惊噫之戗：
+四年后，科普作家Carl Sagan在1994年出版的《黯淡的蓝点》写了一番荡气回肠的惊噫之戗：
 
 >我们成功地（从深空）拍到这张照片，细心再看，你会看见一个小点。就是这里，就是我们的家，就是我们。在这点上有所有你爱的人、你认识的人、你听过的人、曾经存在过的人在活着他们各自的生命。
 
@@ -74,3 +73,7 @@ data-loop="none">
 >地球是这个浩瀚宇宙剧院里的一个细小舞台。想想从那些将领们和皇帝们那里溢出的血河，他们的光荣与胜利让他们成为了这一点上一小部分，一瞬间的统治者。他们时常发生误解，他们又多渴望杀害另一方。他们的敌意有多强烈。我们的装模作样，我们的自以为是，我们的错觉以为自己在宇宙里的位置有多优越，通通都被这暗淡的光点所挑战。
 
 >**我们的星球只是在这被漆黑包裹的宇宙里一粒孤单的微粒而已。我们如此不起眼——在这浩瀚之中，我们不会从任何地方得到提示去拯救我们自身。**
+
+
+
+有时我想，在宇宙中，在时空里，我们算什么呢？也许连一粒微尘都算不上。但在浩瀚之中，存在即是存在，每一分钟亦不容抹煞。
