--- a/content/post/20200302猎户星座.md
+++ b/content/post/20200302猎户星座.md
@@ -10,9 +10,9 @@ mathjax = false
 slug = "Orion"
 keywords = ["朴树","松任谷由実","Carl Sagan"]
 +++
-两年前的一个周末，北京什刹海公园依然像百年前林语堂笔下所描述的「景色淳雅，悠然从容」，像张暖忻的三十年前拍的《北京，你早》一样富有烟火气，溜冰打趣的孩童，笑意的卖花老人，吁气的人群……
+两年前的一个周末，北京什刹海公园依然像百年前林语堂笔下所描述的「景色淳雅，悠然从容」，像张暖忻的三十年前拍的《北京，你早》一样富有烟火气，溜冰打趣的孩童，笑意盈盈的卖花老人，笨拙吁气的人群……
 
-在这个普通的冬日，朴树穿着Daddy Oh Daddy日系撞色毛裤，呼啦啦吹响了铃木Hammond PRO-44，中间的口风琴似爱液般又暖又刺激，灵魂很舒服地蠕动着，想起有个日文词异常传神：一发入魂(にゅうこん)。
+在这个不能再普通的冬日，朴树穿着Daddy Oh Daddy日系撞色毛裤，呼啦啦吹响了铃木Hammond PRO-44，中间暖暖的口风琴似爱液般又黄又刺激，灵魂很舒服地蠕动着，想起有个日文词异常传神：一发入魂(にゅうこん)。
 
 <!--more-->
 
@@ -43,7 +43,7 @@ data-loop="none">
 
 
 
-这是朴树跟网易云音乐合作的一个音乐项目叫"stage舞台"，寓意生活即舞台，音乐即人生。朴师傅片头说这首《猎户星座》成形于一九九七年。九七年的我在干嘛呢，遏抑着偷窥楼下初蕾少女晾在窗外文胸的悸动，在夏末潮湿的晚风里听着《Lady In Red》。近两天在ins上看到日本老阿姨又操起铃木pro44吹Yuming(松任谷由実)那首秀逸的《晩夏(ひとりの季节)》，其中有词云：
+这是朴树跟网易云音乐合作的一个音乐项目叫"stage舞台"，寓意生活即舞台，音乐即人生。朴师傅片头说这首《猎户星座》成形于一九九七年。九七年的我在干嘛呢，遏抑着偷窥楼下初蕾少女晾在窗外文胸的悸动，在夏末潮湿的晚风里听着《Lady In Red》。近两天在ins上看到日本老阿姨又操起铃木pro44吹Yuming(松任谷由実)那首秀逸的《晩夏(ひとりの季节)》，词中有云：
 
 > 夏日将逝/而残存的酷热不肯离去/吞噬晚霞的鸡冠花/如同熊熊燃烧
 
@@ -64,7 +64,7 @@ data-loop="none">
 
 {{< img src="https://ian2.oss-cn-hangzhou.aliyuncs.com/clt6/20200302191432.png" alt="图中亮点处为地球，那个黯淡蓝点就是我们的星球">}}
 
-四年后，科普作家Carl Sagan在1994年出版的《黯淡的蓝点》写了一番荡气回肠的惊噫之戗：
+四年后，科普作家Carl Sagan在《黯淡的蓝点》写了一番荡气回肠的惊噫之戗：
 
 >我们成功地（从深空）拍到这张照片，细心再看，你会看见一个小点。就是这里，就是我们的家，就是我们。在这点上有所有你爱的人、你认识的人、你听过的人、曾经存在过的人在活着他们各自的生命。
 
@@ -76,4 +76,4 @@ data-loop="none">
 
 
 
-有时我想，在宇宙中，在时空里，我们算什么呢？也许连一粒微尘都算不上。但在浩瀚之中，存在即是存在，每一分钟亦不容抹煞。
+有时我想，在宇宙中，在时空里，我们算什么呢？也许连一粒微尘都算不上。「任凭这天空越来越湛蓝，你在我身边越来越平凡」，但在浩瀚之中，存在即是存在，每一分钟亦不容抹煞，因为那是你唯一来过这个尘世的凭证。
