update lots of posts

--- a/content/post/20200302猎户星座.md
+++ b/content/post/20200302猎户星座.md
@@ -10,7 +10,7 @@ mathjax = false
 slug = "Orion"
 keywords = ["朴树","松任谷由実","Carl Sagan"]
 +++
-两年前的一个周末，北京什刹海公园依然像百年前林语堂笔下所描述的「景色淳雅，悠然从容」，像张暖忻的三十年前拍的《北京，你早》一样富有烟火气，溜冰打趣的孩童，笑意盈盈的卖花老人，笨拙吁气的人群……
+二零一八年某个冷肃的周末，北京什刹海公园里的人流目不暇接、熙攘如虹，一切依然像百年前林语堂笔下所描述的「苍古淳雅」，像张暖忻的三十年前拍的《北京，你早》一样富有烟火气。溜冰打趣的孩童，笑意盈盈的卖花老人，笨拙吁气的人群……
 
 在这个不能再普通的冬日，朴树穿着Daddy Oh Daddy日系撞色毛裤，呼啦啦吹响了铃木Hammond PRO-44，中间暖暖的口风琴似爱液般又黄又刺激，灵魂很舒服地蠕动着，想起有个日文词异常传神：一发入魂(にゅうこん)。
 
@@ -41,13 +41,11 @@ data-loop="none">
 
 {{< /quote >}}
 
+这是朴树跟网易云音乐合作的一个古早味音乐项目叫"stage舞台"，寓意生活即舞台，音乐即人生。朴在片头说这首《猎户星座》词曲成形于一九九七年。九七年的我在干嘛呢，遏抑着偷窥楼下初蕾少女晾在窗外文胸的悸动，在夏末潮湿的晚风里听着《Lady In Red》。近两天在ins上看到日本老阿姨又端着铃木pro44，吹起了Yuming(松任谷由実)那首秀逸的《晩夏(ひとりの季节)》，倏然来了感觉，词中有云：
 
+> 夏日将逝/残存的酷热迟迟不愿离去/吞噬晚霞的鸡冠花/如在熊熊燃烧
 
-这是朴树跟网易云音乐合作的一个音乐项目叫"stage舞台"，寓意生活即舞台，音乐即人生。朴师傅片头说这首《猎户星座》成形于一九九七年。九七年的我在干嘛呢，遏抑着偷窥楼下初蕾少女晾在窗外文胸的悸动，在夏末潮湿的晚风里听着《Lady In Red》。近两天在ins上看到日本老阿姨又操起铃木pro44吹Yuming(松任谷由実)那首秀逸的《晩夏(ひとりの季节)》，词中有云：
-
-> 夏日将逝/而残存的酷热不肯离去/吞噬晚霞的鸡冠花/如同熊熊燃烧
-
-倏然来了感觉。就像友川カズキ自慰时老是放Lee Morgan的号子一样，我有段不顺心的时候一起沉湎在2000年前的歌里，听郁东、筠子，感觉那时的生活特别纯粹，特别安心。
+友川カズキ说自己打飞机时老是放Lee Morgan的号子一样，我有段不顺心的时候就会在沉湎千禧年前时光隧道里的歌里，听郁东、筠子，感觉那时的生活特别纯粹，特别安心。
 
 台湾女漫画家高妍在诚光社出了一本致敬細野晴臣的《風街ろまん》的作品叫《间隙》，大意是人生好似音乐，都有间隙，但短暂的灿若鲸落般的音乐耦合，让她产生了偌大的人生满足感，忘却了生活的平庸与琐碎，这便是音乐的力量。
 
@@ -76,4 +74,4 @@ data-loop="none">
 
 
 
-有时我想，在宇宙中，在时空里，我们算什么呢？也许连一粒微尘都算不上。「任凭这天空越来越湛蓝，你在我身边越来越平凡」，但在浩瀚之中，存在即是存在，每一分钟亦不容抹煞，因为那是你唯一来过这个尘世的凭证。
+有时我想，在宇宙中，在时空里，我们算什么呢？也许连一粒微尘都算不上。古有「世界微尘里，吾宁爱与憎」，今有「任凭这天空越来越湛蓝，你在我身边越来越平凡」。但在浩瀚之中，存在即是存在，每一分钟亦不容抹煞，因为那是我们来过这个尘世的唯一凭证。
