upgrade hugo version

--- a/content/post/20200303hugo升级那些事儿.md
+++ b/content/post/20200303hugo升级那些事儿.md
@@ -85,12 +85,15 @@ keywords = ["Hugo","Upgrade","issue"]
 
 Hugo v0.62.0及以上版本中， Goldmark有一项新功能Render Hooks，可以拓展markdown的行为清单，例如重新调整已上传的图像、以新标签打开外链等。需要做的仅仅是在`layouts/_default/_markup`目录中创建相应模板。标准目录结构如下：
 
+```
 layouts
 └── _default
     └── _markup
         ├── render-image.html
         ├── render-image.rss.xml
         └── render-link.html
+```
+
 
 为了能够实现在新标签页面中打开外链的目的，可以在`layouts/_default/_markup`目录下创建一个名为`render-link.html`的新文件，文件内容为：
 
@@ -118,8 +121,7 @@ layouts
 
 暂时没有好的解决方案，所幸文章数量较小，人肉手动修改回来。
 
-
-### relref被删除
+### relref被删除并无实质影响
 
 我注意到，官方在Hugo v0.60.0的声明中有一条：
 
