edit more details

--- a/content/post/20200303hugo升级那些事儿.md
+++ b/content/post/20200303hugo升级那些事儿.md
@@ -1,12 +1,12 @@
 +++
-title= "Hugo升级那些事儿"
+title= "Hugo v0.6.x升级那些事儿"
 date= 2020-03-03T09:27:20+08:00
 type = "post"
 categories = ["技术"]
 draft = false
 toc = true
 reward = true
-codes = ["bash"]
+codes = ["bash","html"]
 douban = false
 mathjax = false
 slug = "upgrade hugo to 0.6.x"
@@ -20,26 +20,26 @@ keywords = ["Hugo","Upgrade","issue"]
 
 ## Hugo 0.6x有哪些重大升级
 
-除却一些鸡零狗碎的升级外，Hugo 0.6x系统最大的变化更换了Markdown渲染器，将原先的Blackfriday换成了Goldmark，好处是更快了，但有得必有舍。
+除却一些鸡零狗碎的升级外，Hugo 0.6x系统最大的变化更换了一个GO语言的Markdown渲染器，将原先的Blackfriday换成了Goldmark，完全符合CommonMark标准、GitHub风格，好处是更快了，但有得必有舍。
 
 强烈建议在升级前好好研究下Hugo的新版[Configure Markup](https://gohugo.io/getting-started/configuration-markup)
 
 ## 本主题升级过程中遇到的若干问题
 
-### 代码块出现黑背景、代码高亮异常
+### 代码块出现黑框背景、代码高亮异常
 
-出现该问题的原因是0.60 版本以上的glodmark默认开启了Fenced Code Blocks高亮模式，与本主题的代码高亮插件highlightjs-line-numbers.js发生冲突。
+出现该问题的原因是0.60 版本以上的glodmark默认全局开启了Fenced Code Blocks高亮模式，与本主题的代码高亮插件highlightjs-line-numbers.js发生冲突。
 
 ```json
  "markup": {
       "highlight": {
-         "codeFences": true,//默认开启，如果你和我一样用了其它高亮插件，请选择false
+         "codeFences": false,//默认开启，如果你和我一样用了其它高亮插件，请选择false
          "guessSyntax": false,
          "hl_Lines": "",
          "lineNoStart": 1,
          "lineNos": false,
-         "lineNumbersInTable": true,//默认开启，以防万一，建议关闭
-         "noClasses": true,//默认开启，以防万一，建议关闭
+         "lineNumbersInTable": false,//默认开启，以防万一，建议关闭
+         "noClasses": false,//默认开启，以防万一，建议关闭
          "style": "monokai",
          "tabWidth": 4
       }
@@ -50,7 +50,7 @@ keywords = ["Hugo","Upgrade","issue"]
 
 {{< img src="https://ian2.oss-cn-hangzhou.aliyuncs.com/clt6/Xnip2020-03-04_00-51-36.jpg" alt="附件模板在升级后变形失效">}}
 
-在升级到0.6.0版本之后，出现了attachment shortcode等个别shortcode失效的情况，本以为是HTML渲染的问题，因为hugo官方在0.6.0版的release中说明，如有需要按如下设置：
+在升级到0.6.0版本之后，出现了attachment等个别shortcode失效的情况，本以为是HTML渲染的问题，因为Hugo官方0.6.0版的release中提到一项类似Blackfriday中` skipHTML`的设置：
 
 >Also, if you have lots of inline HTML in your Markdown files, you may have to enable the `unsafe` mode:
 
@@ -73,7 +73,7 @@ keywords = ["Hugo","Upgrade","issue"]
 
 ### 默认无法以新标签页打开外链
 
-在Blackfriday时代，可以设置外链默认以新标签页打开。为此，我还特意写过一篇《HUGO 如何默认以新建标签方式打开外链》的文章，关键修改只有一条：
+在Blackfriday时代，可以设置外链默认以新标签页打开。为此，我还特意写过一篇《[HUGO 如何默认以新建标签方式打开外链]({{< relref"HUGO如何默认以新建标签方式打开外链.md"}})》的文章，重点只有一条：
 
 ```json
    "blackfriday": {
@@ -119,7 +119,7 @@ layouts
 
 {{< img src="https://ian2.oss-cn-hangzhou.aliyuncs.com/clt6/20200304111738.png"  alt="后置式markdown链接写法在升级后失效">}}
 
-暂时没有好的解决方案，所幸文章数量较小，人肉手动修改回来。
+暂时没有好的解决方案，所幸涉及的文章数量较小，人肉手动修改回来。
 
 ### relref被删除并无实质影响
 
@@ -127,10 +127,29 @@ layouts
 
 >Remove .Site.Ref/RelRef [69fd1c60](https://github.com/gohugoio/hugo/commit/69fd1c60d8bcf6d1cea4bfea852f62df8891ee81)
 
-真真让人惊出一身冷汗，因为我在以往的文章中有不少类似如下的写法：
+真真让人惊出一身冷汗，因为我在以往的文章中有不少类似Ref/Relref的写法：
 
 ```
 《[WebP部署那些事儿]({{</* relref"20190404WebP部署那些事儿.md" */>}})》
 ```
 
-但实际生成的时候，并没有受到影响。
+但实际生成的时候，并没有受到影响。官方文档中[Ref/Relref那页](https://gohugo.io/content-management/cross-references/)也活得好好的，并没有被删除的痕迹，看来受影响的只有`.site`前缀的Ref/Relref，虚惊一场。
+
+### footnote渲染结果的细微差别
+
+这个倒没实质性影响，但在写css时要稍加留意。
+
+前代注脚的通常被渲染成
+
+```html
+<div class="footnotes">
+...
+</div>
+```
+在Hugo v0.60后，则为
+
+```html
+<section class="footnotes" role="doc-endnotes">
+...
+</section>
+```
