--- a/content/post/青年宋美龄的爱情观与择偶观.md
+++ b/content/post/青年宋美龄的爱情观与择偶观.md
@@ -6,7 +6,7 @@ categories = ["文史"]
 comments = true
 reward = true
 mathjax = false
-slug = "cat and tides"
+slug = "Youth Soong May-ling's Notion of romance"
 keywords = ["宋美龄","蒋介石"]
 +++
 
