--- a/content/post/20200302猎户星座.md
+++ b/content/post/20200302猎户星座.md
@@ -41,7 +41,7 @@ data-loop="none">
 
 {{< /quote >}}
 
-这是朴树跟网易云音乐合作的一个古早味音乐项目叫"stage舞台"，寓意生活即舞台，音乐即人生。朴在片头说这首《猎户星座》词曲成形于一九九七年。九七年的我在干嘛呢，遏抑着偷窥楼下初蕾少女晾在窗外文胸的悸动，在夏末潮湿的晚风里听着《Lady In Red》。近两天在ins上看到日本老阿姨又端着铃木pro44，吹起了Yuming(松任谷由実)那首秀逸的《晩夏(ひとりの季节)》，倏然来了感觉，词中有云：
+这是朴树跟网易云音乐合作的一个古早味音乐项目叫"stage舞台"，寓意生活即舞台，音乐即人生。朴在片头说这首《猎户星座》词曲成形于一九九七年。九七年的我在干嘛呢，遏抑着偷窥楼下初蕾少女晾在窗外文胸的悸动，在夏末潮湿的晚风里听着《Lady In Red》。近两天在ins上看到一位日本老阿姨端着铃木pro44，动容地吹起Yuming(松任谷由実)那首秀逸的《晩夏(ひとりの季节)》，倏然来了感觉，词中有云：
 
 > 夏日将逝/残存的酷热迟迟不愿离去/吞噬晚霞的鸡冠花/如在熊熊燃烧
 
@@ -72,6 +72,26 @@ data-loop="none">
 
 >**我们的星球只是在这被漆黑包裹的宇宙里一粒孤单的微粒而已。我们如此不起眼——在这浩瀚之中，我们不会从任何地方得到提示去拯救我们自身。**
 
-
-
 有时我想，在宇宙中，在时空里，我们算什么呢？也许连一粒微尘都算不上。古有「世界微尘里，吾宁爱与憎」，今有「任凭这天空越来越湛蓝，你在我身边越来越平凡」。但在浩瀚之中，存在即是存在，每一分钟亦不容抹煞，因为那是我们来过这个尘世的唯一凭证。
+
+<div
+class="aplayer"
+data-id="617092"
+data-server="netease"
+data-type="song"
+data-mutex="true"
+data-mini="false"
+data-loop="none">
+</div>
+
+{{< quote bar="true" size="17.5px"  ta="center" from="松任谷由実《朝陽の中で微笑んで》">}}
+
+宇宙の片隅で つぶやき合う永遠は<br>
+
+幻だと知っていても<br>
+
+朝陽の中で 微笑んで<br>
+
+形のない愛を つなぎとめて
+
+{{< /quote >}}
