--- a/content/post/20200303hugo升级那些事儿.md
+++ b/content/post/20200303hugo升级那些事儿.md
@@ -73,7 +73,7 @@ keywords = ["Hugo","Upgrade","issue"]
 
 ### 默认无法以新标签页打开外链
 
-在Blackfriday时代，可以设置外链默认以新标签页打开。为此，我还特意写过一篇《[HUGO 如何默认以新建标签方式打开外链]({{< relref"HUGO如何默认以新建标签方式打开外链.md"}})》的文章，重点只有一条：
+在Blackfriday时代，可以设置外链默认以新标签页打开。为此，我还特意写过一篇《[HUGO 如何默认以新建标签方式打开外链]({{< relref"HUGO如何默认以新建标签方式打开外链.md" >}})》的文章，重点只有一条：
 
 ```json
    "blackfriday": {
