--- a/content/post/20200303hugo升级那些事儿.md
+++ b/content/post/20200303hugo升级那些事儿.md
@@ -16,6 +16,8 @@ keywords = ["Hugo","Upgrade","issue"]
 +++
 从去年九月开始，很长一段时间一直停留在Hugo v0.56，因为没搞明白Homebrew的回滚机制。自从用上了Netlify，在`netlify.toml`的环境文件里完全可以自由控制版本，由此一发不可收拾，彻底放飞自我。想升就升，想降就降，不亦乐乎？
 
+{{< img src="https://ian2.oss-cn-hangzhou.aliyuncs.com/clt6/20200304220315.png" >}}
+
 <!--more-->
 
 ## Hugo 0.6x有哪些重大升级
@@ -98,9 +100,29 @@ layouts
 为了能够实现在新标签页面中打开外链的目的，可以在`layouts/_default/_markup`目录下创建一个名为`render-link.html`的新文件，文件内容为：
 
 ```html
-<a href="{{ .Destination | safeURL }}"{{ with .Title}} title="{{ . }}"{{ end }}{{ if strings.HasPrefix .Destination "http" }} target="_blank"{{ end }}>{{ .Text }}</a>
+<a 
+  href = "{{.Destination | safeURL}}" 
+  {{  with  . Title  }}  title = "{{.}}" {{  end  }} 
+  {{  if  strings . HasPrefix  . Destination  " http "  }} target = "_blank"  rel = "noopener" {{  end  }} > 
+  {{.Text}} </a>
 ```
+如果你用了以下链接的书写格式
 
+```
+[Neist](https://nei.st/  "华人独立政见媒体流")
+```
+那么会被 渲染成这样的代码
+
+```
+ href= "Https://nei.st/"  Title= <a "华人独立政见媒体流"  Target= "_Blank"  Rel= "Noopener"> 
+  Neist  </a>
+  ```
+  效果如下：
+  
+  [Neist](https://nei.st/  "华人独立政见媒体流")
+  
+添加Noopener标签可以阻止新标签利用JavaScript功能。同样，rel =“noreferrer”属性也可防止将引用者信息传递给新页面，增加隐私性。
+  
 ### 某些markdown的书写格式失效
 
 如前篇《[重拾中州韵]({{< relref"20190418重拾中州韵.md" >}})》所言：
@@ -123,7 +145,9 @@ layouts
 
 ### relref被删除并无实质影响
 
-我注意到，官方在Hugo v0.60.0的声明中有一条：
+我注意到，官方在Hugo v0.60.0的声明中有一条:
+
+[Hugo](https://gohugo.io/ "Hugo homepage")
 
 >Remove .Site.Ref/RelRef [69fd1c60](https://github.com/gohugoio/hugo/commit/69fd1c60d8bcf6d1cea4bfea852f62df8891ee81)
 
