--- a/content/post/20200303hugo升级那些事儿.md
+++ b/content/post/20200303hugo升级那些事儿.md
@@ -22,7 +22,7 @@ keywords = ["Hugo","Upgrade","issue"]
 
 ## Hugo 0.6x有哪些重大升级
 
-除却一些鸡零狗碎的升级外，Hugo 0.6x系统最大的变化更换了一个GO语言的Markdown渲染器，将原先的Blackfriday换成了Goldmark，完全符合CommonMark标准、GitHub风格，好处是更快了，但有得必有舍。
+除却一些鸡零狗碎的升级外，Hugo 0.6x系统最大的变化更换了一个GO语言的Markdown渲染器，将原先的[Blackfriday](https://github.com/russross/blackfriday)换成了[Goldmark](https://github.com/yuin/goldmark/)，完全符合CommonMark标准、GitHub风格，好处是更快了，但有得必有舍。
 
 强烈建议在升级前好好研究下Hugo的新版[Configure Markup](https://gohugo.io/getting-started/configuration-markup)
 
@@ -116,14 +116,14 @@ layouts
 ```
  href= "Https://nei.st/"  Title= <a "华人独立政见媒体流"  Target= "_Blank"  Rel= "Noopener"> 
   Neist  </a>
-  ```
+```
   效果如下：
-  
+
   [Neist](https://nei.st/  "华人独立政见媒体流")
-  
+
 添加Noopener标签可以阻止新标签利用JavaScript功能。同样，rel =“noreferrer”属性也可防止将引用者信息传递给新页面，增加隐私性。
-  
-### 某些markdown的书写格式失效
+
+### 部分代码换行失效
 
 如前篇《[重拾中州韵]({{< relref"20190418重拾中州韵.md" >}})》所言：
 ```
@@ -137,21 +137,61 @@ layouts
 
 ```
 
-切换到Goldmark后，渲染地一塌糊涂、不堪入目。
+切换到Goldmark后，按《[markdown链接的另一种写法]({{< relref"markdown插图的另一种写法.mdd" >}})》写的末部markdown链接，全部没被加`<br>`。
 
 {{< img src="https://ian2.oss-cn-hangzhou.aliyuncs.com/clt6/20200304111738.png"  alt="后置式markdown链接写法在升级后失效">}}
 
-暂时没有好的解决方案，所幸涉及的文章数量较小，人肉手动修改回来。
+后来无意间发现，打开`hardwraps`即可。
+
+```yaml
+   "goldmark": {
+         "renderer": {
+            "hardWraps": false,//默认是关闭，如果你和我一样有换行引发的排版问题，建议打开试试
+            "unsafe": true,
+            "xHTML": false
+         }
+```
+
+这里涉及到一个`hardwraps`的作用：
+
+Github对于GFM hardwraps有一段介绍：
+
+>The biggest difference that Github Flavored Markdown introduces is in the handling of linebreaks. With Standard Markdown you can hard wrap paragraphs of text and they will be combined into a single paragraph. We find this to be the cause of a huge number of unintentional formatting errors. GFM treats newlines in paragraph-like content as real line breaks, which is probably what you intended.
+
+以下列代码为例：
+
+```html
+Line one
+Line two
+
+Par two
+```
+如果设置开启hardwraps，则输出：
+
+```html
+<p>Line one
+<br>Line two</p>
+
+<p>Par two</p>
+```
+
+如果设置关闭hardwraps，则输出：
+
+```html
+<p>Line one Line two</p>
+
+<p>Par two</p>
+```
 
 ### relref被删除并无实质影响
 
-我注意到，官方在Hugo v0.60.0的声明中有一条:
+官方在Hugo v0.60.0的声明中有一条:
 
 [Hugo](https://gohugo.io/ "Hugo homepage")
 
 >Remove .Site.Ref/RelRef [69fd1c60](https://github.com/gohugoio/hugo/commit/69fd1c60d8bcf6d1cea4bfea852f62df8891ee81)
 
-真真让人惊出一身冷汗，因为我在以往的文章中有不少类似Ref/Relref的写法：
+看完真真让人惊出一身冷汗，因为在以往的文章中有不少类似Ref/Relref的写法：
 
 ```
 《[WebP部署那些事儿]({{</* relref"20190404WebP部署那些事儿.md" */>}})》
