atom feed srupport and edit some details

--- a/content/post/20200303hugo升级那些事儿.md
+++ b/content/post/20200303hugo升级那些事儿.md
@@ -6,7 +6,7 @@ categories = ["技术"]
 draft = false
 toc = true
 reward = true
-codes = ["bash","html"]
+codes = ["bash","html","json","yaml"]
 douban = false
 mathjax = false
 slug = "upgrade hugo to 0.6.x"
@@ -63,6 +63,7 @@ keywords = ["Hugo","Upgrade","issue"]
             "unsafe": true,//默认是关闭，如果你应用了很多shortcode模板，建议开启
             "xHTML": false
          }
+}
 ```
 
 然鹅，并无卵用。于是，遍历了互联网终于找到了解决方案－在shortcode的模板代码首行中写入：
@@ -87,7 +88,7 @@ keywords = ["Hugo","Upgrade","issue"]
 
 Hugo v0.62.0及以上版本中， Goldmark有一项新功能Render Hooks，可以拓展markdown的行为清单，例如重新调整已上传的图像、以新标签打开外链等。需要做的仅仅是在`layouts/_default/_markup`目录中创建相应模板。标准目录结构如下：
 
-```
+```bash
 layouts
 └── _default
     └── _markup
@@ -100,10 +101,10 @@ layouts
 为了能够实现在新标签页面中打开外链的目的，可以在`layouts/_default/_markup`目录下创建一个名为`render-link.html`的新文件，文件内容为：
 
 ```html
-<a 
-  href = "{{.Destination | safeURL}}" 
-  {{  with  . Title  }}  title = "{{.}}" {{  end  }} 
-  {{  if  strings . HasPrefix  . Destination  " http "  }} target = "_blank"  rel = "noopener" {{  end  }} > 
+<a
+  href = "{{.Destination | safeURL}}"
+  {{  with  . Title  }}  title = "{{.}}" {{  end  }}
+  {{  if  strings . HasPrefix  . Destination  " http "  }} target = "_blank"  rel = "noopener" {{  end  }} >
   {{.Text}} </a>
 ```
 如果你用了以下链接的书写格式
@@ -114,7 +115,7 @@ layouts
 那么会被 渲染成这样的代码
 
 ```
- href= "Https://nei.st/"  Title= <a "华人独立政见媒体流"  Target= "_Blank"  Rel= "Noopener"> 
+ href= "Https://nei.st/"  Title= <a "华人独立政见媒体流"  Target= "_Blank"  Rel= "Noopener">
   Neist  </a>
 ```
   效果如下：
@@ -150,6 +151,7 @@ layouts
             "unsafe": true,
             "xHTML": false
          }
+}
 ```
 
 这里涉及到一个`hardwraps`的作用：
