dark mode support based of prefers-color-scheme

--- a/content/post/20190712chrome支持暗黑模式适配.md
+++ b/content/post/20190712chrome支持暗黑模式适配.md
@@ -8,7 +8,7 @@ toc = true
 comments = false
 reward = true
 mathjax = false
-codes = ["bash","html"]
+codes = ["bash","html","css"]
 slug = "Chrome 76 beta switch hugo dark theme with prefers-color-scheme"
 keywords = ["chrome","prefers-color-scheme","dark mode","hugo"]
 +++
@@ -44,7 +44,7 @@ Value:  no-preference | light | dark
 
 ## 如何适配PCS特性
 
-以本主题为例，编辑HUGO主题的layout-header代码（每个主题位置各异），将下列代码写入head标签内[^3][^4]，一般网站默认都是light模式的，所以只写入dark模式的样式即可：
+以本主题为例，编辑Hugo主题的layout-header代码（每个主题位置各异），将下列代码写入head标签内[^3][^4]，一般网站默认都是light模式的，所以只写入dark模式的样式即可：
 
 ```html
 <style>
@@ -52,6 +52,15 @@ Value:  no-preference | light | dark
   /* styles for users who prefer UIs with dark themes */
 }
 </style>
+```
+最简单的处理是利用css3的filter滤镜来变个小魔法，下列代码仅供演示：
+
+```css
+@media (prefers-color-scheme: dark) {
+  body { filter: invert(100%); }
+  img { filter: invert(100%); }
+  body { background-color: #000!important; }
+}
 ```
 
 ```html
@@ -75,7 +84,8 @@ if (matchMedia('(prefers-color-scheme: dark)').matches) {
 <link rel="stylesheet" href="https://unpkg.com/gutenberg-css@0.4/dist/themes/oldstyle.min.css" media="print">
 ```
 
-🙈🙈一个人艰不拆的坏消息：本HUGO主题置入代码后，并不能如愿切换dark mode，原因未知，也许与本主题已经启用toggleTheme功能切换暗黑主题有关，具体要等闲暇排查后才能确认。
+upadted:20200309，本站已成功启用暗黑主题适配，但一键切换的功能模块与暗黑主题尚不能完美融合，即夜间进入暗黑模式后,toggletheme功能会失效，该问题等空了再想办法修复。
+
 
 [^1]: [Chrome Platform Status Feature44 milestone=76](https://www.chromestatus.com/features#milestone%3D76)
 [^2]: [Using dark mode in CSS with MacOS Mojave](https://paulmillr.com/posts/using-dark-mode-in-css/)
