--- a/content/post/20200303hugo升级那些事儿.md
+++ b/content/post/20200303hugo升级那些事儿.md
@@ -10,7 +10,7 @@ codes = ["bash","html","json","yaml"]
 douban = false
 mathjax = false
 slug = "upgrade hugo to 0.6.x"
-comments = false
+comments = true
 keywords = ["Hugo","Upgrade","issue"]
 
 +++
@@ -22,15 +22,28 @@ keywords = ["Hugo","Upgrade","issue"]
 
 ## Hugo 0.6x有哪些重大升级
 
-除却一些鸡零狗碎的升级外，Hugo 0.6x系统最大的变化更换了一个GO语言的Markdown渲染器，将原先的[Blackfriday](https://github.com/russross/blackfriday)换成了[Goldmark](https://github.com/yuin/goldmark/)，完全符合CommonMark标准、GitHub风格，好处是更快了，但有得必有舍。
+除却一些鸡零狗碎的升级外，Hugo 0.6x系统最大的变化即，跟着Gitea更换了一个GO语言的Markdown渲染器，将原先的[Blackfriday](https://github.com/russross/blackfriday)换成了[Goldmark](https://github.com/yuin/goldmark/)，基于CommonMark规范标准，支持GFM。
 
-强烈建议在升级前好好研究下Hugo的新版[Configure Markup](https://gohugo.io/getting-started/configuration-markup)
+有网友做过测试，在CommonMark规范的前提下，4款Go实现的Markdown引擎Lute、goldmark、Blackfriday和golang-commonmark的[性能差距不大](https://github.com/88250/go-markdown-benchmark)，某种程度来讲，Blackfriday因为没有实现GFM，性能反倒看上去更好一些。
+
+当初码云换CommonMark规范解析器时，罗列过有若干好处：
+
+* 标题#后面需要有空格才会正确渲染标题
+* 正确解析形如 Map<String, Collection<Object.toString>> 的文本
+* 解决代码块标签前后没有空行导致不换行显示
+* 解决Readme中注释显示的问题
+* 解决 Html colspan、rowspan 标签无效的问题
+* 解决标题中不支持Code块的问题
+* 解决内容中不留空格无法加粗的问题
+* 支持--构建表格
+
+当然也有不足之处，例如不再支持[TOC]，因此建议在升级前好好研究下Hugo v0.6.x的新版[Configure Markup](https://gohugo.io/getting-started/configuration-markup)
 
 ## 本主题升级过程中遇到的若干问题
 
 ### 代码块出现黑框背景、代码高亮异常
 
-出现该问题的原因是0.60 版本以上的glodmark默认全局开启了Fenced Code Blocks高亮模式，与本主题的代码高亮插件highlightjs-line-numbers.js发生冲突。
+出现该问题的原因是v0.6.x版本以上的glodmark默认全局开启了Fenced Code Blocks高亮模式，与本主题的代码高亮插件highlightjs-line-numbers.js发生冲突。
 
 ```json
  "markup": {
@@ -212,7 +225,7 @@ Par two
 ...
 </div>
 ```
-在Hugo v0.60后，则为
+在Hugo v0.6.x后，则为
 
 ```html
 <section class="footnotes" role="doc-endnotes">
