add lots of old posts & update some js

--- a/content/post/20200303hugo升级那些事儿.md
+++ b/content/post/20200303hugo升级那些事儿.md
@@ -6,7 +6,7 @@ categories = ["技术"]
 draft = false
 toc = true
 reward = true
-codes = ["bash","html","json","yaml"]
+codes = ["bash","html","json","yaml","go"]
 douban = false
 mathjax = false
 slug = "upgrade hugo to 0.6.x"
@@ -22,7 +22,7 @@ keywords = ["Hugo","Upgrade","issue"]
 
 ## Hugo 0.6x有哪些重大升级
 
-除却一些鸡零狗碎的升级外，Hugo 0.6x系统最大的变化即，跟着Gitea更换了一个GO语言的Markdown渲染器，将原先的[Blackfriday](https://github.com/russross/blackfriday)换成了[Goldmark](https://github.com/yuin/goldmark/)，基于CommonMark规范标准，支持GFM。
+除却一些鸡零狗碎的升级外，Hugo 0.6x系统最大的变化即，跟着Gitea更换了一个GO语言的markdown parser，将原先的[Blackfriday](https://github.com/russross/blackfriday)换成了[Goldmark](https://github.com/yuin/goldmark/)，基于CommonMark规范标准，支持GFM。
 
 有网友做过测试，在CommonMark规范的前提下，4款Go实现的Markdown引擎Lute、goldmark、Blackfriday和golang-commonmark的[性能差距不大](https://github.com/88250/go-markdown-benchmark)，某种程度来讲，Blackfriday因为没有实现GFM，性能反倒看上去更好一些。
 
@@ -65,7 +65,7 @@ keywords = ["Hugo","Upgrade","issue"]
 
 {{< img src="https://ian2.oss-cn-hangzhou.aliyuncs.com/clt6/Xnip2020-03-04_00-51-36.jpg" alt="附件模板在升级后变形失效">}}
 
-在升级到0.6.0版本之后，出现了attachment等个别shortcode失效的情况，本以为是HTML渲染的问题，因为Hugo官方0.6.0版的release中提到一项类似Blackfriday中` skipHTML`的设置：
+在升级到0.6.0版本之后，出现了attachment等个别shortcode失效的情况，原因是非markdown语法的html的话预设会变成 `<!-- raw HTML omitted -->`。为此，Hugo官方0.6.0版的release中提到一项类似Blackfriday中` skipHTML`的设置：
 
 >Also, if you have lots of inline HTML in your Markdown files, you may have to enable the `unsafe` mode:
 
@@ -214,21 +214,50 @@ Par two
 
 但实际生成的时候，并没有受到影响。官方文档中[Ref/Relref那页](https://gohugo.io/content-management/cross-references/)也活得好好的，并没有被删除的痕迹，看来受影响的只有`.site`前缀的Ref/Relref，虚惊一场。
 
-### footnote渲染结果的细微差别
+### 两代脚注的渲染结果在css层面值得注意
 
-这个倒没实质性影响，但在写css时要稍加留意。
+根据goldmark 0.60的代码，Hugo脚注的渲染结果与上一代blackfriday相比，有局部改变
+
+```go
+func (r *FootnoteHTMLRenderer) renderFootnoteBackLink(w util.BufWriter, source []byte, node gast.Node, entering bool) (gast.WalkStatus, error) {
+  if entering {
+    n := node.(*ast.FootnoteBackLink)
+    is := strconv.Itoa(n.Index)
+    _, _ = w.WriteString(`<a href="#fnref:`)
+    _, _ = w.WriteString(is)
+    _, _ = w.WriteString(`" class="footnote-backref" role="doc-backlink">`)
+    _, _ = w.WriteString("&#8617;")
+    _, _ = w.WriteString(`</a>`)
+  }
+  return gast.WalkContinue, nil
+}
+```
+实测显示，blackfriday配置中footnoteAnchorPrefix, footnoteReturnLinkContents等参数都失效了，而且HTML渲染结果去掉了a锚点的`rel=`参数，加了个`role=`参数，这个倒没实质性影响，但在写css时要稍加留意。
 
 前代注脚的通常被渲染成
 
 ```html
-<div class="footnotes">
-...
+
+<div class="footnotes" rel="footnote">
+<hr>
+<ol>
+<li id="fn:1">text1</li>
+<li id="fn:2">text2</li>
+……
+<li id="fn:N">text3</li>
+</ol>
 </div>
+
 ```
 在Hugo v0.6.x后，则为
 
 ```html
 <section class="footnotes" role="doc-endnotes">
-...
+<hr><ol>
+<li id="fn:1" role="doc-endnote">text1</li>
+<li id="fn:2" role="doc-endnote">text2</li>
+……
+<li id="fn:N" role="doc-endnote">text3</li>
+</ol>
 </section>
 ```
