--- a/content/post/20080402夜莺.md
+++ b/content/post/20080402夜莺.md
@@ -2,13 +2,14 @@
 title= "夜莺"
 date= 2008-04-02T19:11:26+08:00
 type = "post"
-categories = ["琐记"]
+categories = ["文学"]
 comments = false
 reward = false
 aplayer = false
 mathjax = false
 slug = "nightingale"
-keywords = ["微小说","原创","朝花夕拾"]
+tags = ["速写"]
+keywords = ["微小说","原创"]
 +++
 她常做梦，而且都是噩梦。追溯起来，是她四岁那年开始，也许是六岁。绮年烟波，她实在遗落了干净。只记得头一回做梦，她不晓得，趿着鞋、满身汗，向厨房她的母亲哭诉，“妈妈，我昨天掉进悬崖去了”。这话让伏下脸的母亲频频在人前人后乐了一段光景，至今她仍记得一向温谨的母亲当时是如何跟姊妹们说笑的 。
 
