--- a/content/post/20080406对张.md
+++ b/content/post/20080406对张.md
@@ -7,8 +7,9 @@ comments = false
 reward = true
 aplayer = false
 mathjax = false
-slug = "to somebody"
-keywords = ["朝花夕拾","随笔"]
+tags = ["速写","随笔"]
+slug = "to leslie chang"
+keywords = ["原创","随笔"]
 +++
 何时起，愚人节的边缘，总捱着长亭短亭的清明。是个中西合璧、水仙顾影自怜的冷场寓言？ 不然，你敢破俗说，两处关山、一样眉尖？
 
