--- a/content/post/20080409我钟爱的那些录音师们.md
+++ b/content/post/20080409我钟爱的那些录音师们.md
@@ -8,9 +8,10 @@ reward = true
 aplayer = false
 mathjax = false
 slug = "LOVE through digital mechanical"
-keywords = ["录音师","音乐"]
+tags = ["速写","音乐"]
+keywords = ["录音师","音乐史","随笔"]
 +++
-{{< img src="https://ian2.oss-cn-hangzhou.aliyuncs.com/clt6/20200318205719.png" alt="LOVE through digital(analog) mechanical ，受the rakes的Binary Love词启发">}}
+{{< img src="https://ian2.oss-cn-hangzhou.aliyuncs.com/clt6/20200318205719.png" alt="LOVE through digital(analog) mechanical ，受the rakes的Binary Love启发">}}
 
 ### Martin Birch
 
