--- a/content/post/20080413两只老虎跑得快.md
+++ b/content/post/20080413两只老虎跑得快.md
@@ -2,13 +2,14 @@
 title= "两只老虎跑得快"
 date= 2008-04-13T12:21:26+08:00
 type = "post"
-categories = ["琐记"]
+categories = ["文学"]
 comments = false
 reward = false
 aplayer = false
 mathjax = false
-slug = "two tigers run fast"
-keywords = ["随笔","朝花夕拾"]
+slug = "two tigers，run so fast"
+keywords = ["速写"]
+tags = ["随笔","原创"]
 +++
 正龙拍虎，纸老虎被打回原体，但精刻细划却是真应景，求名求利的外景，打真军摄下的内景，无不可景，所谓芹泥雨润，淖土亦饰雨景。精刮稍伶俐者，火眼金睛，洞穿明煌如火的假虎不费吹灰之力，西洋镜一旦破形，被怨诽、被暗寸，作威作福的赃帽舍而其谁?
 <!--more-->　　　
