--- a/content/post/20080416浮华.md
+++ b/content/post/20080416浮华.md
@@ -2,13 +2,14 @@
 title= "浮华"
 date= 2008-04-16T02:21:26+08:00
 type = "post"
-categories = ["琐记"]
+categories = ["文学"]
 comments = false
 reward = false
 aplayer = false
 mathjax = false
 slug = "Vanity Fair"
-keywords = ["龙应台","张大春","八卦"]
+keywords = ["龙应台","张大春","八卦","随笔"]
+tags = ["速写","八卦"]
 +++
 龙应台：「过十字路口时，人们不耐烦地等候红灯转绿，总有一半的人，两边张望一下，脚步不停，一个箭步就抢着穿过了红灯街口。但是，如果在等候过街的一群人里，有一个父亲或母亲手里牵着一个幼儿，站在路口，我发现，那一整群急躁的人就忍着，忍着，忍到绿灯真的亮起，才开始快快走动。那牵着手的父亲或母亲，可能在滚动的人群里低头跟孩子说话，“你看，红灯不能走，要等绿灯。”我很惊讶：这是什么样的社会默契啊。不需要开口，一群不相干的人都知道，而且接受，而且切身实践一件事；你怎么做，孩子就怎么学，所以，不要给孩子错的示范。」
 <!--more-->
