--- a/content/post/20080417蛇腹之城.md
+++ b/content/post/20080417蛇腹之城.md
@@ -2,13 +2,14 @@
 title= "蛇腹之城"
 date= 2008-04-17T22:21:26+08:00
 type = "post"
-categories = ["琐记"]
+categories = ["文学"]
 comments = false
 reward = false
 aplayer = false
 mathjax = false
 slug = "city under serpent"
-keywords = ["随笔","朝花夕拾"]
+keywords = ["随笔","片段"]
+tags = ["速写"]
 +++
 黛帛的云层腹底由于华彩衍射潵着熏紫色的玦光，似迤逦柔软的蛇蟒之腹盘踞在暮梗高宇上。“好美的夜空阿”，初次赴约的某君熠开了眼兴叹道。丝毫未察觉这凝景的不祥之兆。
 <!--more-->　　　
