--- a/content/post/20080421阅毒.md
+++ b/content/post/20080421阅毒.md
@@ -8,7 +8,8 @@ reward = false
 aplayer = false
 mathjax = false
 slug = "malicious tongue"
-keywords = ["亦舒","胡兰成","朱天心","朱天文"]
+keywords = ["亦舒","胡兰成","朱天心","朱天文","八卦"]
+tags = ["速写","八卦"]
 +++
 灭绝师太曾痛骂胡某人的吹捧和谄媚之术， “那种感觉于是更加龌龊，完全是老而不死是为贼，使人欲呕”
 
