--- a/content/post/20080514無常.md
+++ b/content/post/20080514無常.md
@@ -2,13 +2,14 @@
 title= "無常"
 date= 2008-05-14T12:21:26+08:00
 type = "post"
-categories = ["琐记"]
+categories = ["音乐","文学"]
 comments = false
-reward = false
+reward = true
 aplayer = false
 mathjax = false
 slug = "nothing lasts forever"
-keywords = ["诗歌","歌词"]
+keywords = ["诗歌","歌词","Jack Or Jive"]
+tags = ["翻译","词作","速写"]
 +++
 {{< quote bar="true" size="17.5px"  ta="center" from="Jack Or Jive - 献花">}}
 
