--- a/content/post/20080521借.md
+++ b/content/post/20080521借.md
@@ -8,6 +8,7 @@ reward = false
 aplayer = false
 mathjax = false
 slug = "borrow"
+tags = ["速写"]
 keywords = ["微小说","原创"]
 +++
 澪和女友闹翻了，坊邻好友都惋惜着又是哪出颠沛离合的纠结戏，不由多悬了颗心！ 可怜他，是先可怜了苏。似乎没有比一个女士断魂落魄更值得慰存的事了。
