--- a/content/post/20080524向田邦子 | 没有写字的明信片.md
+++ b/content/post/20080524向田邦子 | 没有写字的明信片.md
@@ -2,7 +2,7 @@
 title= "向田邦子 | 没有写字的明信片"
 date= 2008-05-24T20:12:26+08:00
 type = "post"
-categories = ["琐记"]
+categories = ["文学"]
 comments = false
 douban = true
 reward = false
@@ -10,6 +10,7 @@ aplayer = false
 mathjax = false
 slug = "a letter without words"
 keywords = ["向田邦子","随笔"]
+tags = ["转载","向田邦子"]
 +++
 已过世的父亲是个勤于写信的人。
 
