--- a/content/post/20080601缺角.md
+++ b/content/post/20080601缺角.md
@@ -2,13 +2,14 @@
 title= "缺角"
 date= 2008-06-01T10:12:26+08:00
 type = "post"
-categories = ["琐记"]
+categories = ["文学","音乐"]
 comments = false
 reward = false
 aplayer = false
 mathjax = false
 slug = "missing corner"
 keywords = ["诗歌","歌词","原创"]
+tags = ["速写","词作"]
 +++
 作词：k　　 作曲：Tor Lundvall
 　　
