--- a/content/post/20080614萤之光.md
+++ b/content/post/20080614萤之光.md
@@ -2,13 +2,14 @@
 title= "萤之光"
 date= 2008-06-14T02:12:26+08:00
 type = "post"
-categories = ["琐记"]
+categories = ["文学"]
 comments = false
 reward = false
 aplayer = false
 mathjax = false
 slug = "Only Little Light"
-keywords = ["随笔","朝花夕拾"]
+keywords = ["随笔"]
+tags = ["速写"]
 +++
 {{< quote bar="true" size="17.5px"  ta="center" from="Unto ashes -Penumbra">}}
 Teach you how to swim<br>　　Teach me how to drown
