--- a/content/post/20080729真夏.md
+++ b/content/post/20080729真夏.md
@@ -2,13 +2,14 @@
 title= "真夏"
 date= 2008-07-29T09:12:26+08:00
 type = "post"
-categories = ["音乐"]
+categories = ["音乐","文学"]
 comments = false
 reward = false
 aplayer = false
 mathjax = false
 slug = "manatsu"
 keywords = ["诗歌","歌词","原创"]
+tags = ["速写","词作"]
 +++
 华数台片头歌词原版
 
