--- a/content/post/20080810流放鲸.md
+++ b/content/post/20080810流放鲸.md
@@ -2,13 +2,14 @@
 title= "流放鲸"
 date= 2008-08-10T11:22:26+08:00
 type = "post"
-categories = ["琐记"]
+categories = ["文学"]
 comments = false
 reward = false
 aplayer = false
 mathjax = false
 slug = "colossal exiled whale"
 keywords = ["诗歌","歌词","原创"]
+tags = ["速写","词作"]
 +++
 突然　　想
 　　豢养一头透明的鲸
