--- a/content/post/20080822无心可猜.md
+++ b/content/post/20080822无心可猜.md
@@ -2,13 +2,14 @@
 title= "无心可猜"
 date= 2008-10-22T14:24:16+08:00
 type = "post"
-categories = ["琐记"]
+categories = ["文学"]
 comments = false
 reward = false
 aplayer = false
 mathjax = false
 slug = "theres no mind to read"
-keywords = ["朝花夕拾","随笔"]
+keywords = ["张岱","随笔","帕维奇"]
+tags = ["速写"]
 +++
 我犯了错，不可遏抑地。像个挫败而无辜的婴儿，而自私之后的卑微，狡黠之后的无助，可是天为什么这么快就白了，好似在半夜惊醒，恐怖地看见床对面的大穿衣镜发出幽兰的光，整幢楼因为没有了声息被幽深中无尽的未知笼罩而充满了令人不安的陌生感。下雨的街道显得平静温柔，挟着阴霾的冷雨在纸伞上发出“笃笃”的声音，饱满而结实，却滴在心伤处。爱比死更冷，法斯宾德说爱是滞滞的彷徨，是不开花的疤痕。
 
