--- a/content/post/20080827第一百零一个关于你的字.md
+++ b/content/post/20080827第一百零一个关于你的字.md
@@ -2,13 +2,14 @@
 title= "第一百零一个关于你的字"
 date= 2008-08-27T01:22:26+08:00
 type = "post"
-categories = ["琐记"]
+categories = ["文学"]
 comments = false
 reward = false
 aplayer = false
 mathjax = false
-slug = "101 word about you"
-keywords = ["琐记","朝花夕拾"]
+slug = "101 words about you"
+keywords = ["随笔"]
+tags = ["速写"]
 +++
 喜嗔无定的溽热气候，蝉声嘶噪，一树翻过一树，响了整个残夏。长长的信笺，我在某个段落中起身。每个回合，趔跌一列骨牌，骨牌从世界最高的一座山，一直排到最深的海底火山口。而在海底火山口，沉积着时间无法丈量的记忆。每一次深呼吸，想把你吸进身体里，不管你在遥远城市，有人关照你，甚至爱你，甚至更多，而这一切多像是，你躲进了我，再也不出来，颠覆了我的安静，造就生命里不可逼视的丰饶。
 <!--more-->
