--- a/content/post/20090310但使相知莫相负.md
+++ b/content/post/20090310但使相知莫相负.md
@@ -8,7 +8,8 @@ reward = false
 aplayer = false
 mathjax = false
 slug = "acquaintance only with memory"
-keywords = ["朝花夕拾","随笔"]
+keywords = ["牡丹亭","随笔"]
+tags = ["速写"]
 +++
 牡丹亭一出戏说到尾声，众花神齐唱：但使相知莫相负，牡丹亭上三生路。看这出戏看到这里，都噙着泪。
 
