--- a/content/post/20090329整容大国.md
+++ b/content/post/20090329整容大国.md
@@ -2,16 +2,17 @@
 title= "整容大国"
 date= 2009-03-29T18:34:16+08:00
 type = "post"
-categories = ["琐记"]
+categories = ["文学"]
 comments = false
 reward = true
 aplayer = false
 mathjax = false
 slug = "plastic-surgery nation"
-keywords = ["朝花夕拾","随笔"]
+keywords = ["CCP","历史","随笔"]
+tags = ["速写"]
 +++
 世上顶级化妆师，多被影城好莱坞罗致。然而若论给历史美容，顶级大师俱出于祖国内地，连隆胸、纤体、抽脂都做足全套，端的是技艺非凡。
 
 孔捷生曾提过一个细节：《水浒传》里鲁智深下山买醉，酒家见他是出家人，都不肯招呼。鲁智深只好撒谎说自己是过路的野和尚，才蒙骗过去，谁知豪饮之下，便醉打山门，把五台山闹得满天神佛。这才是如假包换的鲁智深。殊不知国内拍电视剧《水浒传》，却改成鲁智深下山只为打造兵器，偏有几个存心不良的和尚诱之激之，骗他破戒，一轮斗酒，遂烂醉如泥。鲁智深倘是这样的敦厚温良之辈，你还觉得他可爱吗？
 <!--more-->
-《我的团长我的团》对共军的隆胸与易容，不一而足。本朝「瞒与骗」的技艺炉火纯青，早已不以为耻。不但古人今人皆可重塑，连洋人也不肯放过。克林顿太太希拉里的《活出历史》，大陆中译本不是一样给她「抽脂」和「结扎」吗？无论希拉里能否当选自由女神掌舵人，谅她在中国就怎也没法子「活出」酱缸一般的历史。
+《我的团长我的团》对CCP的隆胸与易容，不一而足。本朝「瞒与骗」的技艺炉火纯青，早已不以为耻。不但古人今人皆可重塑，连洋人也不肯放过。克林顿太太希拉里的《活出历史》，大陆中译本不是一样给她「抽脂」和「结扎」吗？无论希拉里能否当选自由女神掌舵人，谅她在中国就怎也没法子「活出」酱缸一般的历史。
