--- a/content/post/20090430第五个现代化.md
+++ b/content/post/20090430第五个现代化.md
@@ -2,13 +2,14 @@
 title= "第五个现代化"
 date= 2009-06-30T10:34:16+08:00
 type = "post"
-categories = ["琐记"]
+categories = ["文学"]
 comments = false
 reward = true
 aplayer = false
 mathjax = false
 slug = "the 5th modernization"
 keywords = ["生活大爆炸","杭州","白先勇"]
+tags = ["速写"]
 +++
 『生活大爆炸』里的Sheldon一抹淡定状吐槽Leonard：我不知道以全世界人口为基数来计算你追求Penny的成功率有多大，但是我肯定在这（部车子）里，你是绝对的万人迷。诚如音乐是爱乐者眼中永昼的佛界果陀，不可不吃，双眼仍雪亮的老年俱乐部组员心中也有份淫民日报，不可不看。
 
