--- a/content/post/20091202你的白雪公主呢？.md
+++ b/content/post/20091202你的白雪公主呢？.md
@@ -2,12 +2,13 @@
 title= "你的白雪公主呢？"
 date= 2009-12-02T23:11:26+08:00
 type = "post"
-categories = ["琐记"]
+categories = ["文学"]
 comments = false
 reward = true
 aplayer = false
 mathjax = false
 slug = "where's your Snow White"
+tags = ["速写"]
 keywords = ["钟玲玲","西西","原创","诗歌"]
 +++
 读钟玲玲的上古书作《我不灿烂》，玲珑四犯。她的字去绵丽，留清新，但每刻都将白日重重叠叠起来，她惮于失忆，于是不得不咀嚼失眠。雨涩也好，风悭也好，人悄花又慢是她的路数。尤其写到：
