--- a/content/post/20100512我们没有自己的歌.md
+++ b/content/post/20100512我们没有自己的歌.md
@@ -2,13 +2,14 @@
 title= "我们没有自己的歌"
 date= 2010-05-12T18:34:16+08:00
 type = "post"
-categories = ["琐记"]
+categories = ["音乐"]
 comments = false
 reward = true
 aplayer = false
 mathjax = false
 slug = "no native songs belong to us"
-keywords = ["朝花夕拾","音乐史","随笔"]
+tags = ["速写"]
+keywords = ["音乐史","原创","随笔"]
 +++
 数月前的酒席上，有一位年过花甲的老知青，提起爱唱薛范先生译配的苏联歌，如《莫斯科郊外的晚上》、《阿辽沙》、《山楂树》、《喀秋莎》等，流露着对一去 不返的集体记忆的凭吊。但他惋惜道，那只是“生活在别处”，是“借他人酒杯浇胸中块垒”，也曾有热血青年试过决意谱写自己的歌，无非是表达思乡之情，却被 打成“精神污染”、“封资修小情调”，有甚者更招来牢狱之灾。
 
