--- a/content/post/20151215别让鲜花咬伤你的耳朵.md
+++ b/content/post/20151215别让鲜花咬伤你的耳朵.md
@@ -8,7 +8,8 @@ reward = true
 aplayer = false
 mathjax = false
 slug = "donnt let flowers bite your ears"
-keywords = ["英伦","brit-pop","shoegazing"]
+keywords = ["音乐史","brit-pop","shoegazing"]
+tags = ["音乐史","速写"]
 +++
 
 ——记英伦90年代shoegazing风潮
