--- a/content/post/20190707为你的zsh安装翻墙弹椅.md
+++ b/content/post/20190707为你的zsh安装翻墙弹椅.md
@@ -12,7 +12,7 @@ codes = ["bash"]
 slug = "config zsh with proxy"
 keywords = ["pyenv","iterm","zsh","proxy"]
 +++
-事情的经过是这样，我需要安装一个基于Python的命令行工具[gitsome](https://github.com/donnemartin/gitsome)。过程相当傻瓜，利用 pip 即可一步安装：
+起因是要安装一个基于Python的命令行工具[gitsome](https://github.com/donnemartin/gitsome)。过程相当傻瓜，利用 pip 即可一步安装：
 ```bash
 $ pip install gitsome
 ```
