--- a/content/post/20080724夏風邪.md
+++ b/content/post/20080724夏風邪.md
@@ -8,7 +8,8 @@ reward = false
 aplayer = false
 mathjax = false
 slug = "na tsu ka ze"
-keywords = ["随笔","朝花夕拾"]
+keywords = ["随笔","谷口治郎"]
+tags = ["速写","漫画"]
 +++
 {{< img src="https://ian2.oss-cn-hangzhou.aliyuncs.com/clt6/20200318193410.png" alt="谷口治郎 - 櫸之木">}}
 <!--more-->　
