--- a/content/post/20090430打倒芭樂歌.md
+++ b/content/post/20090430打倒芭樂歌.md
@@ -9,11 +9,10 @@ aplayer = false
 mathjax = false
 slug = "f**k off the ballad song"
 keywords = ["syu","高崎晃","大村孝佳"]
+tags = ["音乐","吉他"]
 +++
 注意syu有两三年了，在听过的日本中生辈吉他手里，syu和大村孝佳绝非池中物，高手中的高手。无论从技术还是旋律上，目前还未见能超越syu的人。 大村孝佳代表了高崎晃的一挂，虚名花翎冠比机关单位的餐饮住宿发票还多：高崎晃第二、光速の天才、yngwie的新古典技术流，而syu则是无冕之王，吉他名厂ESP 也做过一辑他的专属Crying star吉他专场，从一开始的鼓手，到扬名立万的Galneryus乐队，再到现在沉寂的SPINALCORD,syu的炫技更侧重旋律性，快到指板都有股烧焦的糊味，但他传统意义的速弹是用以构架power metal的音墙，师承山本恭司的衣钵（syu偶像）。
-
 <!--more-->
-
 {{< img src="https://ian2.oss-cn-hangzhou.aliyuncs.com/clt6/20200318182701.png" >}}
 
 曾有份疑似吴宗宪我猜我猜我猜猜猜巨乳排行的日本吉他手榜单，老将松本孝宏排22名，而新星syu则蹿升至13名（前三是石器时代的实力派怪咖大叔们：高崎晃、中间英明、橘高文彦，窃以为横关墩应该进三甲），有段时间BOSS公司才找他代言GT10效果器（这款旗舰产品中国大陆地区形象代言人实至名归,著名爆发户李延亮），事实上，他现场串单块用的踏板是vox的。
