--- a/content/post/20110712郑逸梅写张爱玲：喧腾人口的女小说家.md
+++ b/content/post/20110712郑逸梅写张爱玲：喧腾人口的女小说家.md
@@ -2,7 +2,7 @@
 title= "郑逸梅写张爱玲：喧腾人口的女小说家"
 date= 2011-07-12T18:34:16+08:00
 type = "post"
-categories = ["琐记"]
+categories = ["文学"]
 comments = false
 reward = true
 aplayer = false
@@ -15,6 +15,8 @@ keywords = ["朝花夕拾","随笔"]
 于其人，辞措是不怀好意的，先是“`消沉多年`”， 继而“`又复喧腾人口`”，还交待了张从香港回上海，结交了一位园艺家黄岳渊，喜栽花木的周瘦鹃又时常到黄氏园游憩，与张偶遇，才有了《沉香屑·第一炉香》的 后话。
 
 于其文，郑老倒是毕恭毕敬，赏爱有嘉，称其“`笔墨轻清流利，逗人喜爱`”，他还披露，当初是因为千元稿酬之争，张才腰斩《连环套》，从此不给《万象》 “一行字”。
+
+<!--more-->
 
 郑逸梅还假好友平襟亚（《万象》老板）之口，“`很不以爱玲为然`”。似乎男性文人都对张氏在文坛的喧腾和特立独行的做派嗤之以鼻，除了傅雷、平襟亚外，时评人秋翁甚至公开嘲讽张爱玲：
 
