--- a/content/post/20130911最伟大的守门员.md
+++ b/content/post/20130911最伟大的守门员.md
@@ -12,7 +12,7 @@ tags = ["速写"]
 keywords = ["原创","随笔"]
 +++
 在历史群像中，他毫无疑问是一尊无法逾越的巍巍伟人。六十多年前，正是他的左扑右挡、力挽狂澜，对手在伤停补时阶段才未扭转局势，他「才饮长沙水，又食武昌鱼」，闲庭信步地守出了一个国、一个时代。直至今日，他还在镇守着世界上最雄伟的南天门——「天安门」。
-
+<!--more-->
 往大了说，如果守门员分三六九等，他必然是Level最高的一位，是守住了六分之一人类的Big Brother。往小了说，如果他不做椅子男（chairman），长沙卡西利亚斯、湖南诺伊尔、中国雅辛也是指日可待的。
 
 {{< img src="https://ian2.oss-cn-hangzhou.aliyuncs.com/clt6/20200318214318.png" alt="2008年1月8日西班牙《国家报》15版的雪铁龙汽车广告">}}
