--- a/content/post/20190310推开青春的门.md
+++ b/content/post/20190310推开青春的门.md
@@ -8,6 +8,7 @@ aplayer = true
 categories = ["琐记"]
 slug = "open the gate of flashed days"
 keywords = ["杨乃文","BBS"]
+tags = ["速写"]
 +++
 一时心血来潮，想为记忆角落里蒙尘多年的BBS拂拂尘，这才发现mac没法用fterm、cterm。失落大于惊讶，半路放狗找了welly才得以偿愿。
 
@@ -49,6 +50,6 @@ data-loop="none">
 
 二十岁的我们急迫于表达自己，三十岁的我们哀怨于表白别人，四十岁的我们乏力于表演社会……
 
-三联周刊70主笔王恺有一句签名档刻骨铭心：`我们正沉没入一代代的人海`。其实满世界都是我这样的人。16岁，30岁，60岁。他们以为看透了世界之平庸，又无力超越这平庸。他们无力成为“我”，但又不屑于成为“他”。他们感到痛苦，但是真的，连这痛苦都很平庸。
+前三联周刊70主笔王恺有一句签名档钻骨铭心：`我们正沉没入一代代的人海`。其实满世界都是我这样的人。16岁，30岁，60岁。他们以为看透了世界之平庸，又无力超越这平庸。他们无力成为“我”，但又不屑于成为“他”。他们感到痛苦，但是真的，连这痛苦都很平庸。
 
 可是现在的自己，又何尝不是呢。
