--- a/content/post/20190325仲代达矢：演员毕生的三个谜题.md
+++ b/content/post/20190325仲代达矢：演员毕生的三个谜题.md
@@ -2,12 +2,13 @@
 title= "仲代达矢：演员毕生的三个谜题"
 date= 2019-03-25T10:35:30+08:00
 tags = ["仲代达矢","日本","电影"]
-categories = ["人物"]
+categories = ["电影"]
 comments = true
 mathjax = false
 reward= true
 slug = "Tatsuya Nakadai: a actress need to answer three puzzles in life"
 keywords = ["Tatsuya Nakadai","仲代达矢","日本电影"]
+tags = ["转载","仲代达矢","电影"]
 description = "2019年3月21日，日本国宝级的表演大师仲代达矢先生在北京中国电影资料馆与著名演员濮存昕、导演陆川、日本文化学者王众一以及六百多名影迷一起探讨电影、演员等话题"
 +++
 2019年3月21日，北京中国电影资料馆迎来了日本国宝级的表演大师仲代达矢先生，从下午4点半，到晚上9点半，足足五个小时，在放映了他的代表作《切腹》之后，仲代达矢先生也亲自来到了台上，跟六百多位影迷见了面。同场交流的，还有著名演员濮存昕、导演陆川、日本文化学者王众一。
