--- a/content/post/20190501娶妻当如阿宝.md
+++ b/content/post/20190501娶妻当如阿宝.md
@@ -3,7 +3,7 @@ title= "娶妻当如阿宝"
 date= 2019-05-01T17:37:06+08:00
 type = "post"
 categories = ["文史"]
-draft = false
+draft = true
 comments = true
 reward = true
 douban = false
