--- a/content/post/20190407一个正则错误的背后.md
+++ b/content/post/20190407一个正则错误的背后.md
@@ -13,7 +13,7 @@ keywords = ["正则表达式","hugo"]
 +++
 写完《[WebP部署那些事儿]({{< relref"20190404WebP部署那些事儿.md" >}})》，一心想把所有的图片资源都置换成WebP格式。
 
-一个好消息是，基于[Hugo自带的Figure简码改造的HEG]({{< relref "为hugo添加HEG相册.md">}})用得次数屈指可数，都是用自己更喜欢的![text]\(url\)添加图片资源，方便归纳。不好的消息是，然而截至目前，站内文章达460+篇，如果想要手动对Markdown文件中进行置换的话，工作量浩大。于是乎，注意点自然而然就转移到了如何用正则表达式归纳、然后用unix命令来检索、替换。
+一个好消息是，基于[Hugo自带的Figure简码改造的HEG]({{< relref "20190225为hugo添加HEG相册.md">}})用得次数屈指可数，都是用自己更喜欢的![text]\(url\)添加图片资源，方便归纳。不好的消息是，然而截至目前，站内文章达460+篇，如果想要手动对Markdown文件中进行置换的话，工作量浩大。于是乎，注意点自然而然就转移到了如何用正则表达式归纳、然后用unix命令来检索、替换。
 <!--more-->
 首先明确的是，基本思路是先检索当前目录下所有*.MD 文件的内容，如果遇到
 
