fixed renamed post

--- a/content/post/20200303hugo升级那些事儿.md
+++ b/content/post/20200303hugo升级那些事儿.md
@@ -151,7 +151,7 @@ layouts
 
 ```
 
-切换到Goldmark后，按《[markdown链接的另一种写法]({{< relref"markdown插图的另一种写法.mdd" >}})》写的末部markdown链接，全部没被加`<br>`。
+切换到Goldmark后，按《[markdown链接的另一种写法]({{< relref"20190315markdown插图的另一种写法.md" >}})》写的末部markdown链接，全部没被加`<br>`。
 
 {{< img src="https://ian2.oss-cn-hangzhou.aliyuncs.com/clt6/20200304111738.png"  alt="后置式markdown链接写法在升级后失效">}}
 
